--- a/index.html
+++ b/index.html
@@ -173,7 +173,9 @@
               <h3>ABOUT US</h3>
               <p class="mb-1">Fusce sem dolor, interdum in efficitur at, faucibus.</p>
               <div class="hr-line mb-4"></div>
-              <p>Rathinam Group of Institutions has been thrived its layers in the education pitch, with its outstanding academia. We are the India's leading institution in Innovation, Incubation and Industry Collaborations. We ranked among the top in NIRF, ARIIA, INSTITUTIONS INNOVATION COUNCIL, THE WEEK, OUTLOOK, TIMES OF INDIA & INDIA TODAY.</p>
+              <p>Rathinam, as a prestigious institution, is noted for its exceptional educational standards. The Rathinam Group is the first organization that combines education, IT development, and infrastructure development all under one roof.</p>
+              <p>The Group provides aspiring students from all over the world a variety of conventional and modern courses. The campus is located on NH 209 in south Coimbatore and spans 70 acres. The organization, which has state-of-the-art infrastructure, selects its skilled and experienced teaching team with great care.</p>
+              <p>It's where a slew of major MNC Companies recruit from a pool of well-educated, well-informed, and well-trained hands-on students. Our innovative programme is a great way to stay motivated, stand out from the crowd, increase your value to future employers, and allow students to reach their maximum potential. Rathinam is committed to training tomorrow's leaders and providing students with a wide range of skills that employers are increasingly seeking.</p>
             </div>
           </div>
           <div class="col-md-12 col-lg-12">
@@ -181,46 +183,110 @@
               <!-- <img src="img/about2.jpg" alt=""/> -->
               <div class="about-carosul">
                 <div class="about-carosul-img">
-                  <img src="img/A++.webp" alt=""/>
+                  <img src="img/awards-1-min.png" alt=""/>
                 </div>
               </div>
               
               <div class="about-carosul">
                 <div class="about-carosul-img">
-                  <img src="img/A+.webp" alt=""/>
+                  <img src="img/awards-2-min.png" alt=""/>
                 </div>
               </div>
 
               <div class="about-carosul">
                 <div class="about-carosul-img">
-                  <img src="img/NBA.webp" alt=""/>
+                  <img src="img/awards-3-min.png" alt=""/>
                 </div>
               </div>
 
               <div class="about-carosul">
                 <div class="about-carosul-img">
-                  <img src="img/NIRF.webp" alt=""/>
+                  <img src="img/awards-4-min.png" alt=""/>
                 </div>
               </div>
 
               <div class="about-carosul">
                 <div class="about-carosul-img">
-                  <img src="img/four-star.webp" alt=""/>
+                  <img src="img/awards-5-min.png" alt=""/>
                 </div>
               </div>
 
               <div class="about-carosul">
                 <div class="about-carosul-img">
-                  <img src="img/ARIIA.webp" alt=""/>
+                  <img src="img/awards-6-min.png" alt=""/>
                 </div>
               </div>
 
-              <div class="about-carosul">
-                <div class="about-carosul-img">
-                  <img src="img/Mentor.webp" alt=""/>
-                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container mt-4 mb-4">
+        <div class="row">
+          <div class="col-md-4 col-lg-4">
+            <div class="clg-spl-features">
+              <div class="clg-spl-img mb-3">
+                <img src="img/Aboard.webp" alt=""/>
               </div>
-
+              <div class="clg-spl-desc mb-3">
+                <h5>ABROAD STUDENTS</h5>
+                <p><strong>300+</strong> International Students from <strong>20+</strong> States and </strong>30+</strong> countries.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-4">
+            <div class="clg-spl-features">
+              <div class="clg-spl-desc mb-3">
+                <h5>PROGRAMS</h5>
+                <p>We Offer More than 70+ innovative courses.</p>
+              </div>
+              <div class="clg-spl-img mb-3">
+                <img src="img/entreprenur.webp" alt=""/>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-4">
+            <div class="clg-spl-features">
+              <div class="clg-spl-img mb-3">
+                <img src="img/IIC.webp" alt=""/>
+              </div>
+              <div class="clg-spl-desc mb-3">
+                <h5>IIC RANKING</h5>
+                <p>RCAS & RTC Proudly marches ahead with 5 Star IIC Ranking in 2020.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-4">
+            <div class="clg-spl-features">
+              <div class="clg-spl-img mb-3">
+                <img src="img/facility.webp" alt=""/>
+              </div>
+              <div class="clg-spl-desc mb-3">
+                <h5>FACILITIES</h5>
+                <p>Our Campus is Well connected with the city.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-4">
+            <div class="clg-spl-features">
+              <div class="clg-spl-desc mb-3">
+                <h5>ENTREPRENEURSHIP</h5>
+                <p>We Promote Innovation and Entrepreneurship development through formal and non-formal programs.</p>
+              </div>
+              <div class="clg-spl-img mb-3">
+                <img src="img/program.webp" alt=""/>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-4">
+            <div class="clg-spl-features">
+              <div class="clg-spl-img mb-3">
+                <img src="img/entreprenur.webp" alt=""/>
+              </div>
+              <div class="clg-spl-desc mb-3">
+                <h5>ARIIA RANKING</h5>
+                <p>RTC & RCAS Ranked Excellent in ARIIA Ranking 2021.</p>
+              </div>
             </div>
           </div>
         </div>
@@ -375,6 +441,232 @@
         </div>
       </div>
     </section>
+    <section id="education-loan-section">
+      <div class="container">
+        <div class="row mt-4">
+          <div class="title text-center mb-3">
+            <h3>EDUCATIONAL LOAN</h3>
+          </div>
+          <div class="col-md-6 col-lg-6">
+            <div class="loan-img">
+              <img src="img/loan.webp" alt=""/>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-6">
+            <div class="loan-desc">
+              <p>Educational Loan Assistance for Rathinam Group Students.</p>
+              <p>The goal of Rathinam Group is to assist deserving/meritorious students in obtaining financial aid to further their study. To encourage students to pursue higher education despite financial constraints, most banks, whether state or federal government-owned, now offer attractive loan options to students.</p>
+              <p>We believe that talent should be rewarded. Rathinam Group has established a separate loan aid unit to enable students to seek loans from banks with which the university has ties at the time of admission (online or offline).</p>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-4 mb-4">
+          <div class="title text-center mt-3 mb-4">
+            <h4>DOCUMENTS REQUIRED</h4>
+          </div>
+          <div class="col-md-4 col-lg-4">
+            <div class="documents-list">
+              <div class="documents-title">
+                <h5>From Applicant Side</h5>
+              </div>
+              <div class="document-list-ul">
+                <ul>
+                  <li><p>KYC (Aadhaar Card/ Voter Card/ Driving License/ Passport).</p></li>
+                  <li><p>2 Recent Passport Size Photographs.</p></li>
+                  <li><p>Mark Sheets/Passing Certificates of 10TH, 12TH/Diploma & Degree.</p></li>
+                  <li><p>PAN Card.</p></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-4">
+            <div class="documents-list">
+              <div class="documents-title">
+                <h5>From Rathinam Group Side</h5>
+              </div>
+              <div class="document-list-ul">
+                <ul>
+                  <li><p>Admission Offer Letter</p></li>
+                  <li><p>Full Fee Structure of the Chosen Course</p></li>
+                  <li><p>Prospectus of the college</p></li>
+                  <li><p>Courses (Fee Payments Slips/ Registration Slip)</p></li>
+                  <li><p>UGC/AICTE Affiliation Letter/ Other Affiliation for Particular Courses</p></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-4">
+            <div class="documents-list">
+              <div class="documents-title">
+                <h5>From Applicant Side</h5>
+              </div>
+              <div class="document-list-ul">
+                <ul>
+                  <li><p>KYC (Aadhaar Card/ Voter card/ Driving License/ Passport)</p></li>
+                  <li><p>2 Recent Passport Size Photographs</p></li>
+                  <li><p>PAN Card</p></li>
+                  <li><p>Last 6-month bank account statement</p></li>
+                  <li><p>IT returns/ IT assessment order of previous 2 years/ Form no 16/16A/Salary Slip or Income Proof issued by Magistrate/Tehsildar</p></li>
+                  <li><p>A brief statement of assets & liabilities of co-borrower/ guarantor</p></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="hostel-facilities-section">
+      <div class="container">
+        <div class="row">
+          <div class="title text-center mb-3">
+            <h3>RATHINAM HOSTELS - NEXT HOME FOR STUDENTS</h3>
+          </div>
+          <div class="hostel-desc mb-4">
+            <p>Rathinam Institutions takes pride in mentioning that Rathinam Hostels are managed by a well experienced professional hostel operator. It is known for its management capabilities in Co-living spaces across South India. There are spacious separate hostels for boys and girls which can be occupied by more than 1500 students inside the campus itself.</p>
+            <p>Rathinam Hostels provide Top Class infrastructure facilities and provides secured stay for the students. It also provides “Mobile App” through which a student can give feedback and address all the grievances and maintain the leave of absentees.</p>
+            <p>Biometrics is also installed to monitor and restrict unwanted movement of the students.</p>
+            <p>Some of the Highlighted Features listed Below as follow</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="title text-center mb-4">
+            <h3>HOSTEL FACILITIES - HOME AWAY FROM HOME</h3>
+          </div>
+          <div class="col-md-2 col-lg-2">
+            <div class="hostel-icons-with-title">
+              <div class="hostel-icon">
+                <img src="img/icons/buffet.png" alt=""/>
+              </div>
+              <div class="hostel-desc text-center">
+                <h6>Catering Service</h6>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-2 col-lg-2">
+            <div class="hostel-icons-with-title">
+              <div class="hostel-icon">
+                <img src="img/icons/house-keeping.png" alt=""/>
+              </div>
+              <div class="hostel-desc text-center">
+                <h6>House Keeping</h6>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-2 col-lg-2">
+            <div class="hostel-icons-with-title">
+              <div class="hostel-icon">
+                <img src="img/icons/patient.png" alt=""/>
+              </div>
+              <div class="hostel-desc text-center">
+                <h6>Medical care</h6>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-2 col-lg-2">
+            <div class="hostel-icons-with-title">
+              <div class="hostel-icon">
+                <img src="img/icons/shield.png" alt=""/>
+              </div>
+              <div class="hostel-desc text-center">
+                <h6>24x7 security assures a safe living</h6>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-2 col-lg-2">
+            <div class="hostel-icons-with-title">
+              <div class="hostel-icon">
+                <img src="img/icons/security-camera.png" alt=""/>
+              </div>
+              <div class="hostel-desc text-center">
+                <h6>Installed 100 CCTV Cameras Around Hostel</h6>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-2 col-lg-2">
+            <div class="hostel-icons-with-title">
+              <div class="hostel-icon">
+                <img src="img/icons/charge.png" alt=""/>
+              </div>
+              <div class="hostel-desc text-center">
+                <h6>Uninterrupted Power Supply</h6>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-2 col-lg-2">
+            <div class="hostel-icons-with-title">
+              <div class="hostel-icon">
+                <img src="img/icons/gym.png" alt=""/>
+              </div>
+              <div class="hostel-desc text-center">
+                <h6>Fitness Center</h6>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-2 col-lg-2">
+            <div class="hostel-icons-with-title">
+              <div class="hostel-icon">
+                <img src="img/icons/bowling.png" alt=""/>
+              </div>
+              <div class="hostel-desc text-center">
+                <h6>Indoor Game Centre</h6>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-2 col-lg-2">
+            <div class="hostel-icons-with-title">
+              <div class="hostel-icon">
+                <img src="img/icons/sri-ranganathasvamy.png" alt=""/>
+              </div>
+              <div class="hostel-desc text-center">
+                <h6>Prayer Hall</h6>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-2 col-lg-2">
+            <div class="hostel-icons-with-title">
+              <div class="hostel-icon">
+                <img src="img/icons/garbage-truck.png" alt=""/>
+              </div>
+              <div class="hostel-desc text-center">
+                <h6>Garbage Services</h6>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-2 col-lg-2">
+            <div class="hostel-icons-with-title">
+              <div class="hostel-icon">
+                <img src="img/icons/support.png" alt=""/>
+              </div>
+              <div class="hostel-desc text-center">
+                <h6>Travel Services</h6>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-md-2 col-lg-2">
+            <div class="hostel-icons-with-title">
+              <div class="hostel-icon">
+                <img src="img/icons/warehouse.png" alt=""/>
+              </div>
+              <div class="hostel-desc text-center">
+                <h6>24X7 Wi-Fi Facility</h6>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>  
+    </section>
     <section id="achivement-section">
       <div class="achivement_container">
         <div class="container">
@@ -464,6 +756,47 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="placement-section">
+      <div class="container mb-4">
+        <div class="row">
+          <div class="title text-center mb-4">
+            <h3>RATHINAMITES - PLACEMENTS STATISTICS</h3>
+          </div>
+          <div class="col-md-3 col-lg-3">
+            <div class="placement-statistics">
+              <div class="placement-statistics-title">
+                <p>150+</p>
+              </div>
+              <p>Recruiters Hired By Our Rathimites</p>
+            </div> 
+          </div>
+          <div class="col-md-3 col-lg-3">
+            <div class="placement-statistics">
+              <div class="placement-statistics-title">
+                <p>100+</p>
+              </div>
+              <p>Companies Offering 5 Lakhs PA or Above</p>
+            </div> 
+          </div>
+          <div class="col-md-3 col-lg-3">
+            <div class="placement-statistics">
+              <div class="placement-statistics-title">
+                <p>₹50 <span>Lakhs</span></p>
+              </div>
+              <p>Highest Salary Package Availed By Our Rathimites</p>
+            </div> 
+          </div>
+          <div class="col-md-3 col-lg-3">
+            <div class="placement-statistics">
+              <div class="placement-statistics-title">
+                <p>100+</p>
+              </div>
+              <p>Internship Availed By Our Rathimites</p>
+            </div> 
           </div>
         </div>
       </div>
@@ -572,7 +905,7 @@
 
       $(document).ready(function() {
           $("#about-img").owlCarousel({
-              items : 4,
+              items : 5,
               itemsDesktop:[1199,3],
               itemsDesktopSmall:[980,2],
               itemsMobile : [600,1],
