--- a/index.html
+++ b/index.html
@@ -173,9 +173,7 @@
               <h3>ABOUT US</h3>
               <p class="mb-1">Fusce sem dolor, interdum in efficitur at, faucibus.</p>
               <div class="hr-line mb-4"></div>
-              <p>Rathinam, as a prestigious institution, is noted for its exceptional educational standards. The Rathinam Group is the first organization that combines education, IT development, and infrastructure development all under one roof.</p>
-              <p>The Group provides aspiring students from all over the world a variety of conventional and modern courses. The campus is located on NH 209 in south Coimbatore and spans 70 acres. The organization, which has state-of-the-art infrastructure, selects its skilled and experienced teaching team with great care.</p>
-              <p>It's where a slew of major MNC Companies recruit from a pool of well-educated, well-informed, and well-trained hands-on students. Our innovative programme is a great way to stay motivated, stand out from the crowd, increase your value to future employers, and allow students to reach their maximum potential. Rathinam is committed to training tomorrow's leaders and providing students with a wide range of skills that employers are increasingly seeking.</p>
+              <p>The Rathinam Group is a prestigious institution which is noted for its exceptional educational standards. It is the first organization that combines education, information technology development and infrastructure development for all under one roof. The group provides aspiring students from all over the world a variety of conventional and modern courses. The campus is located on NH 209 in south Coimbatore and spans 70 acres. The organization which has state-of-the-art infrastructure selects its skilled and experienced teaching team with great care. It's where a slew of major MNC Companies recruit from a pool of well-educated, well-informed, and well-trained hands-on students. Our innovative program is a great way to stay motivated, stand out from the crowd, increase your value to future employers and allow students to reach their maximum potential. The Rathinam Group is committed to training tomorrow's leaders and providing students with a wide range of skills that employers are increasingly seeking.</p>
             </div>
           </div>
           <div class="col-md-12 col-lg-12">
@@ -454,9 +452,7 @@
           </div>
           <div class="col-md-6 col-lg-6">
             <div class="loan-desc">
-              <p>Educational Loan Assistance for Rathinam Group Students.</p>
-              <p>The goal of Rathinam Group is to assist deserving/meritorious students in obtaining financial aid to further their study. To encourage students to pursue higher education despite financial constraints, most banks, whether state or federal government-owned, now offer attractive loan options to students.</p>
-              <p>We believe that talent should be rewarded. Rathinam Group has established a separate loan aid unit to enable students to seek loans from banks with which the university has ties at the time of admission (online or offline).</p>
+              <p>Educational Loan Assistance for Rathinam Group Students. The goal of Rathinam Group is to assist rewarding students in obtaining financial aid to stimulate their study. To motivate students to pursue higher education despite financial constraints from most banks, whether state or federal government-owned which can offer attractive loan options to students. We believe that talent should be given in recognition of service. Rathinam Group has created a separate loan aid unit to authorize students to look for loans from banks with which the university has ties at the time of admissions online or offline.</p>
             </div>
           </div>
         </div>
@@ -522,10 +518,9 @@
             <h3>RATHINAM HOSTELS - NEXT HOME FOR STUDENTS</h3>
           </div>
           <div class="hostel-desc mb-4">
-            <p>Rathinam Institutions takes pride in mentioning that Rathinam Hostels are managed by a well experienced professional hostel operator. It is known for its management capabilities in Co-living spaces across South India. There are spacious separate hostels for boys and girls which can be occupied by more than 1500 students inside the campus itself.</p>
-            <p>Rathinam Hostels provide Top Class infrastructure facilities and provides secured stay for the students. It also provides “Mobile App” through which a student can give feedback and address all the grievances and maintain the leave of absentees.</p>
-            <p>Biometrics is also installed to monitor and restrict unwanted movement of the students.</p>
-            <p>Some of the Highlighted Features listed Below as follow</p>
+            <p>Rathinam Group takes pride in recognizing that Rathinam Hostels are controlled by a well experienced professional hostel operator. It is known for its management proficiency in Co-living spaces across South India. There are spacious separate hostels for boys and girls which can be settled by more than 1500 students inside the campus itself.</p>
+            <p>Rathinam Hostels provide Top Class infrastructure facilities and provides secured stay for the students. It also provides “Mobile App” through which a student can give his or her feedback by addressing all their grievances to maintain their leave of absence. Bio-metrics is also installed to monitor and limit unwanted movement of the students.</p>
+            <p>Some of the highlighted features listed below as follow.</p>
           </div>
         </div>
         <div class="row">
