banner content updated

--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
     <section id="banner__secction">
       <div class="container">
         <div class="row">
-          <div class="col-md-8 col-lg-8">
+          <div class="col-md-7 col-lg-7">
             <div class="banner_img_content">
-              <h1>Welcome to our university</h1>
-              <p>Fusce sem dolor, interdum in efficitur at, faucibus nec lorem.Sed nec molestie justo. Nunc quis sapien in arcu pharetra volutpat.Morbi nec vulputate dolor.</p>
+              <h1>Education that Fuels Your Passion</h1>
+              <p>At Rathinam College, we espouse the philosophy that education ought to transcend the mere acquisition of academic proficiency and instead serve as a catalyst for unleashing the full potential of our students.</p>
               <button>Get Started Now</button>
             </div>
           </div>
