--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="col-md-8 col-lg-8 contacts-topbar">
               <div class="row">
-                <div class="col-md-4 col-lg-4">
+                <div class="col-6 col-sm-6 col-md-4 col-lg-4 p-1">
                   <div class="contact_phone_list">
                     <div class="contact_icon">
                       <i class="fa fa-phone"></i>
@@ -48,7 +48,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-4 col-lg-4">
+                <div class="col-6 col-sm-6 col-md-4 col-lg-4 p-1">
                   <div class="contact_phone_list">
                     <div class="contact_icon">
                       <i class="fas fa-envelope-open"></i>
@@ -59,7 +59,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-4 col-lg-4">
+                <div class="col-6 col-sm-6 col-md-4 col-lg-4 p-1 location-column">
                   <div class="contact_phone_list">
                     <div class="contact_icon">
                       <i class="fa-sharp fa-solid fa-map-location-dot"></i>
@@ -92,7 +92,45 @@
             </ul>
           </div>
         </div>
-      </div> 
+      </div>
+      <div class="mobile-container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container">
+            <a class="navbar-brand" href="#"><img src="img/logo.webp" alt=""/></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Overview</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Why Rathinam</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Campus Life</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">How to Apply</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Scholarship</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Educational Loan</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Hostel Facilities</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Placement</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
     </section>
     <section id="banner__secction">
       <div class="container">
@@ -117,8 +155,8 @@
                   <i class="fa fa-american-sign-language-interpreting"></i>
                 </div>
                 <div class="feature-content">
-                  <h4>Trending Courses</h4>
-                  <p>Lorem ipsum dolor sit amet Sed nec molestie justo</p>
+                  <h4>TOP NOTCH <br/>FACULTY</h4>
+                  <p>Erudite scholars with advanced academic degrees and  a wealth of expertise in  fields of specialisation.</p>
                 </div>
               </div>
             </div>
@@ -130,8 +168,8 @@
                   <i class="fa-solid fa-book"></i>
                 </div>
                 <div class="feature-content">
-                  <h4>Books & Liberary</h4>
-                  <p>Lorem ipsum dolor sit amet Sed nec molestie justo</p>
+                  <h4>STATE OF THE ART <br/>FACILITIES</h4>
+                  <p>Campus furnished with state-of-the-art infrastructure to facilitate a learning environment that fosters modernity.</p>
                 </div>
               </div>
             </div>
@@ -143,8 +181,8 @@
                   <i class="fa-solid fa-user"></i>
                 </div>
                 <div class="feature-content">
-                  <h4>Certified Teachers</h4>
-                  <p>Lorem ipsum dolor sit amet Sed nec molestie justo</p>
+                  <h4>STRONG <br/>COMMUNITY</h4>
+                  <p>A dynamic array of student organisations designed to promote interpersonal dexterity contributing to holistic development.</p>
                 </div>
               </div>
             </div>
@@ -156,8 +194,8 @@
                   <i class="fa-solid fa-graduation-cap"></i>
                 </div>
                 <div class="feature-content">
-                  <h4>Certification</h4>
-                  <p>Lorem ipsum dolor sit amet Sed nec molestie justo</p>
+                  <h4>EXPERIENTIAL <br/>LEARNING</h4>
+                  <p>Experiential learning opportunities including internships and cooperative education programs that provide  exposure.</p>
                 </div>
               </div>
             </div>
@@ -171,7 +209,7 @@
           <div class="col-md-12 col-lg-12">
             <div class="about_section">
               <h3>ABOUT US</h3>
-              <p class="mb-1">Fusce sem dolor, interdum in efficitur at, faucibus.</p>
+              <p class="mb-1">Nurturing Global Leaders through Curriculum embedded learning.</p>
               <div class="hr-line mb-4"></div>
               <p>The Rathinam Group is a prestigious institution which is noted for its exceptional educational standards. It is the first organization that combines education, information technology development and infrastructure development for all under one roof. The group provides aspiring students from all over the world a variety of conventional and modern courses. The campus is located on NH 209 in south Coimbatore and spans 70 acres. The organization which has state-of-the-art infrastructure selects its skilled and experienced teaching team with great care. It's where a slew of major MNC Companies recruit from a pool of well-educated, well-informed, and well-trained hands-on students. Our innovative program is a great way to stay motivated, stand out from the crowd, increase your value to future employers and allow students to reach their maximum potential. The Rathinam Group is committed to training tomorrow's leaders and providing students with a wide range of skills that employers are increasingly seeking.</p>
             </div>
@@ -296,9 +334,9 @@
           <div class="col-lg-4 col-md-4 course__slider">
              <div class="popular__couses">
                 <h3>POPULAR COURSES</h3>
-                <p class="mb-1">Fusce sem dolor inter in efficitur faucibus.</p>
+                <p class="mb-1">Achive the apex with our acclaimed courses</p>
                 <div class="hr-line mb-4"></div>
-                <p>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized.</p>
+                <p>Experience the pinnacle of academic excellence with our acclaimed courses, designed to ignite your intellectual curiosity and professional growth.</p>
              </div>
           </div>
           <div class="col-lg-8 col-md-8">
@@ -317,6 +355,9 @@
         </div>
         <div class="apply-row">
           <img src="img/website-info.png" alt=""/>        
+        </div>
+        <div class="mobile-apply-now">
+          <img src="img/mobile-apply-img.png" alt=""/>
         </div>
       </div>
     </section>
@@ -450,7 +491,7 @@
               <img src="img/loan.webp" alt=""/>
             </div>
           </div>
-          <div class="col-md-6 col-lg-6">
+          <div class="col-md-6 col-lg-6 education-loan-desc">
             <div class="loan-desc">
               <p>Educational Loan Assistance for Rathinam Group Students. The goal of Rathinam Group is to assist rewarding students in obtaining financial aid to stimulate their study. To motivate students to pursue higher education despite financial constraints from most banks, whether state or federal government-owned which can offer attractive loan options to students. We believe that talent should be given in recognition of service. Rathinam Group has created a separate loan aid unit to authorize students to look for loans from banks with which the university has ties at the time of admissions online or offline.</p>
             </div>
@@ -525,7 +566,7 @@
         </div>
         <div class="row">
           <div class="title text-center mb-4">
-            <h3>HOSTEL FACILITIES - HOME AWAY FROM HOME</h3>
+            <h3>HOSTEL FACILITIES - NOT JUST COMFORT, IT'S THE LUXURY</h3>
           </div>
           <div class="col-md-2 col-lg-2">
             <div class="hostel-icons-with-title">
@@ -802,10 +843,10 @@
           <div class="row">
             <div class="col-lg-3 col-md-3">
               <div class="people_says">
-                <h3>WORD FROM RATHINAMITES</h3>
-                <p>Fusce sem dolor inter in efficitur faucibus.</p>
+                <h3>WORDS FROM RATHINAMITES</h3>
+                <p>Testimonials of transformation to the apex</p>
                 <div class="hr-line mb-4"></div>
-                <p>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized</p>
+                <p>Listen to our distinguished alumni, as they recount how Rathinam Group helped them transform their dreams into successful careers, with unparalleled academic and career development opportunities.</p>
               </div>
             </div>
             <div class="col-lg-9 col-md-9">
